--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="index.html#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="products.html">Products</a>
           </li>
-          <a href="#"><button class="button-style btn-sm ms-3">Contact</button></a>
+          <a href="contact.html"><button class="button-style btn-sm ms-3">Contact</button></a>
         </ul>
       </div>
     </div>
@@ -262,7 +262,7 @@
 
 <!-- ---------------------------services start--------------------------->
 
-<section class="services">
+<section class="services" id="services">
   <div class="container">
     <h6 class="sub-head-color text-uppercase fw-bold text-center sub-head">Services</h6>
     <i class="fa-light fa-horizontal-rule"></i>
