--- a/products.html
+++ b/products.html
@@ -35,15 +35,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="index.html#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="products.html">Products</a>
           </li>
-          <a href="#"><button class="button-style btn-sm ms-3">Contact</button></a>
+          <a href="contact.html"><button class="button-style btn-sm ms-3">Contact</button></a>
         </ul>
       </div>
     </div>
