--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#services">Services</a>
+              <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="products.html">Products</a>
@@ -271,9 +271,7 @@
       <p class="para-color mt-2 text-center para-width">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Suspendisse viverra arcu nec diam elementum suscipit. Quisque sit amet ex orci. Proin a purus non ex maximus
         commodo pharetra eget augue. </p>
-
       <div class="row">
-
         <div class="col-lg-4 padding-0">
           <a href="" class="service-card">
             <div class="card border-0" style="width: 18rem;">
@@ -282,12 +280,11 @@
                 <h6 class="card-title head-color fw-bold mt-3">Tailoring Materials</h6>
                 <p class="card-text para-color">Some quick example text to build on the card title and make up the bulk
                   of the card's content.</p>
-                <a href="#" class="fw-bold">Read more <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
+                <a href="contact.html" class="fw-bold">Contact us <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
               </div>
             </div>
           </a>
         </div>
-
         <div class="col-lg-4 padding-0">
           <div class="card border-0" style="width: 18rem;">
             <div class="card-body">
@@ -295,11 +292,10 @@
               <h6 class="card-title head-color fw-bold mt-3">Ladies Fashion Materials</h6>
               <p class="card-text para-color">Some quick example text to build on the card title and make up the bulk of
                 the card's content.</p>
-              <a href="#" class="fw-bold">Read more <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
+              <a href="contact.html" class="fw-bold">Contact us <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 padding-0">
           <div class="card border-0" style="width: 18rem;">
             <div class="card-body">
@@ -307,15 +303,12 @@
               <h6 class="card-title head-color fw-bold mt-3">Hot Fix Stone</h6>
               <p class="card-text para-color">Some quick example text to build on the card title and make up the bulk of
                 the card's content.</p>
-              <a href="#" class="fw-bold">Read more <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
+              <a href="contact.html" class="fw-bold">Contact us <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
             </div>
           </div>
         </div>
-
       </div>
-
       <div class="row mt-4">
-
         <div class="col-lg-4">
           <div class="card border-0" style="width: 18rem;">
             <div class="card-body">
@@ -323,11 +316,10 @@
               <h6 class="card-title head-color fw-bold mt-3">Model Stone</h6>
               <p class="card-text para-color">Some quick example text to build on the card title and make up the bulk of
                 the card's content.</p>
-              <a href="#" class="fw-bold">Read more <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
+              <a href="contact.html" class="fw-bold">Contact us <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
             </div>
           </div>
         </div>
-
         <div class="col-lg-4">
           <div class="card border-0" style="width: 18rem;">
             <div class="card-body">
@@ -335,11 +327,10 @@
               <h6 class="card-title head-color fw-bold mt-3">Fabric None Hot Fix Stone</h6>
               <p class="card-text para-color">Some quick example text to build on the card title and make up the bulk of
                 the card's content.</p>
-              <a href="#" class="fw-bold">Read more <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
+              <a href="contact.html" class="fw-bold">Contact us <i class='fa fa-long-arrow-alt-right ms-2'></i></a>
             </div>
           </div>
         </div>
-
         <div class="col-lg-4">
           <a href="#">
             <div class="card border-0 see-more" style="width: 18rem;">
@@ -350,9 +341,7 @@
             </div>
           </a>
         </div>
-
       </div>
-
     </div>
   </section>
 
@@ -369,10 +358,7 @@
       <h6 class="sub-head-color text-uppercase fw-bold text-center sub-head">products</h6>
       <i class="fa-light fa-horizontal-rule"></i>
       <h3 class="head-color text-center fw-bold mt-3">Lorem ipsum dolor sit amet</h3>
-      <p class="para-color mt-2 text-center para-width">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Suspendisse viverra arcu nec diam elementum suscipit. Quisque sit amet ex orci. Proin a purus non ex maximus
-        commodo pharetra eget augue. </p>
-
+      <p class="para-color mt-2 text-center para-width">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra arcu nec diam elementum suscipit. Quisque sit amet ex orci. Proin a purus non ex maximus commodo pharetra eget augue. </p>
         <div class="filter-buttons">
           <button type="button" class="button is-checked" data-filter="">All</button>
           <button type="button" class="button" data-filter=".Model-Stone">Model Stone</button>
